test/sematic/resources/positive/recursive_tydec8.tig
let
    type a = rec
    type rec = { x: a }
in
end