test/sematic/resources/negative/false_record.tig
let
    type a = {x: int, x: int, x: string}
in
end
